syntax = "proto3";
option go_package = "github.com/dnahurnyi/uploader/portDomain";

message Port {
    string key = 1;
    string name = 2;
    string city = 3;
    string country = 4;
    repeated string alias = 5;
    repeated string regions = 6;
    repeated double coordinates = 7;
    string province = 8;
    string timezone = 9;
    repeated string unlocs = 10;
    string code = 11;
}

message PortID {
    string key = 1;
}

message Empty {}

service PortDomain {
    rpc LoadPorts(stream Port) returns (Empty) {}
    rpc GetPortByID(PortID) returns (Port) {}
}